<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoodGoodStudyAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dsc_img_logo_big">大标志</string>
    <string name="tab_forgot_password">忘了密码</string>
    <string name="tab_no_register">还未注册</string>
    <string name="tab_remeber_password">记住密码</string>
    <string name="hint_input_name">请输入名字</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="dsc_img_login">login标签的图片</string>
    <string name="hint_input_email">请输入注册邮箱</string>
    <string name="dsc_img_register">register标签图片</string>
    <string name="tab_has_register">已注册？登陆</string>
    <string name="open">open</string>
    <string name="close">close</string>

</resources>
